<resources>
    <string name="app_name">Hunden</string>
    <string name="find">помогу найти!</string>
    <string name="lose">потерялось животное</string>
    <string name="your_email">email</string>
    <string name="empty_password">****</string>
    <string name="surname">фамилия</string>
    <string name="tel">номер телефона</string>
    <string name="pass">пароль</string>
    <string name="email">почта</string>
    <string name="already_exist">уже зарегистрирован</string>
    <string name="confirm">подтвердить</string>
    <string name="name">имя</string>
    <string name="change_pass">сменить пароль</string>
    <string name="back">отмена</string>
    <string name="new_user">зарегистрироваться</string>
    <string name="forgot_pass">Забыли пароль?</string>
    <string name="come_in">вход</string>
    <string name="change_email">изменить email</string>
    <string name="change_password">изменить пароль</string>
    <string name="send">отправить</string>
    <string name="delete">удалить</string>
    <string name="change_login">изменить логин</string>
    <string name="del_user">удалить пользователя</string>
    <string name="exit">выйти из учетной записи</string>
    <string name="my_list">мои объявления</string>
    <string name="end_list">назад</string>
    <string name="choose_place">выбрать место</string>
    <string name="choose_time">ввести время</string>
    <string name="money">р. вознаграждение</string>
    <string name="add_photo">прикрепить фото</string>
    <string name="comment">коментарий</string>
    <string name="publish">опубликовать</string>
    <string name="pet_name">Кличка</string>
    <string name="descr_pet">описание</string>
    <string name="tel_number">+79001111110</string>
    <string name="owner">фамилия Имя</string>
    <string name="time">время - 00:00</string>
    <string name="old_email">текущий email</string>
    <string name="new_email">новый email</string>
    <string name="current_password">текущий пароль</string>
    <string name="new_password">новый пароль</string>
    <string name="adress">адрес</string>
    <string name="error">error</string>
    <string name="tutorial">для того чтобы загрузить дополнительные метки, нажмите на произвольный район на карте, метки из этого района загрузятся из базы данных</string>

</resources>