<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".log_in_activities.UserAccountActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow"
            app:layout_scrollFlags="scroll|enterAlways" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/green"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:padding="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/acc_old_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="email" />

        <EditText
            android:id="@+id/acc_new_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/acc_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/current_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="current password" />

        <EditText
            android:id="@+id/acc_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/new_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </LinearLayout>

        <Button
            android:id="@+id/acc_ChangeEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_email"
            android:background="@color/dark_green"
            android:textColor="@color/yellow" />

        <Button
            android:id="@+id/acc_ChangePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_password"
            android:background="@color/dark_green"
            android:textColor="@color/yellow" />

        <Button
            android:id="@+id/acc_Send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/send"
            android:background="@color/dark_green"
            android:textColor="@color/yellow" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/acc_Remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/delete"
            android:background="@color/dark_green"
            android:textColor="@color/yellow" />

        <Button
            android:id="@+id/acc_bth_mylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/dark_green"
            android:background="@drawable/button_shape"
            android:text="@string/my_list" />

        <Button
            android:id="@+id/acc_bth_change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/dark_green"
            android:background="@drawable/button_main_shape"
            android:text="@string/change_login" />

        <Button
            android:id="@+id/acc_bth_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/dark_green"
            android:background="@drawable/button_main_shape"
            android:text="@string/change_password" />

        <Button
            android:id="@+id/acc_bth_remove_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/dark_green"
            android:background="@drawable/button_main_shape"
            android:text="@string/del_user" />

        <Button
            android:id="@+id/acc_bth_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/dark_green"
            android:background="@drawable/button_main_shape"
            android:text="@string/exit" />

    </LinearLayout>

</LinearLayout>
