<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".log_in_activities.UserAccountActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:padding="10dp"
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:theme="@style/MainEditText"
            android:background="@drawable/edittext_shape"
            android:id="@+id/acc_old_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="email"/>

        <EditText
            android:theme="@style/MainEditText"
            android:background="@drawable/edittext_shape"
            android:id="@+id/acc_new_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:importantForAutofill="no" />

        <EditText
            android:theme="@style/MainEditText"
            android:background="@drawable/edittext_shape"
            android:id="@+id/acc_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/current_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:autofillHints="current password" />

        <EditText
            android:theme="@style/MainEditText"
            android:background="@drawable/edittext_shape"
            android:id="@+id/acc_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/new_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </LinearLayout>

        <Button
            android:theme="@style/MainButtonTheme"
            android:background="@drawable/button_main_shape"
            android:paddingHorizontal="10dp"
            android:id="@+id/acc_ChangeEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_email"/>

        <Button
            android:theme="@style/MainButtonTheme"
            android:background="@drawable/button_main_shape"
            android:paddingHorizontal="10dp"
            android:id="@+id/acc_ChangePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_password"
            />

        <Button
            android:theme="@style/MainButtonTheme"
            android:background="@drawable/button_main_shape"
            android:paddingHorizontal="10dp"
            android:id="@+id/acc_Send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/send"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" />

        <Button
            android:theme="@style/MainButtonTheme"
            android:background="@drawable/button_main_shape"
            android:paddingHorizontal="10dp"
            android:id="@+id/acc_Remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/delete"/>


        <Button
            android:theme="@style/MainButtonTheme"
            android:background="@drawable/button_main_shape"
            android:id="@+id/acc_bth_change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="25dp"
            android:text="@string/change_login" />

        <Button
            android:theme="@style/MainButtonTheme"
            android:background="@drawable/button_main_shape"
            android:id="@+id/acc_bth_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="25dp"
            android:text="@string/change_password" />

        <Button
            android:theme="@style/MainButtonTheme"
            android:background="@drawable/button_main_shape"
            android:id="@+id/acc_bth_remove_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="25dp"
            android:text="@string/del_user" />

        <Button
            android:theme="@style/ButtonTheme"
            android:background="@drawable/button_shape"
            android:id="@+id/acc_bth_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="25dp"
            android:text="@string/exit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="16dp">
            <Button
                android:layout_gravity="right"
                android:theme="@style/ButtonTheme"
                android:background="@drawable/button_shape"
                android:id="@+id/bth_back_from_user_acc"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/end_list" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
