<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".log_in_activities.SignupActivity">

        <LinearLayout
            android:layout_marginHorizontal="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:theme="@style/MainEditText"
                android:background="@drawable/edittext_shape"
                android:id="@+id/sign_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:theme="@style/MainEditText"
                android:background="@drawable/edittext_shape"
                android:layout_marginTop="16dp"
                android:id="@+id/sign_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName" />

            <EditText
                android:theme="@style/MainEditText"
                android:background="@drawable/edittext_shape"
                android:layout_marginTop="16dp"
                android:id="@+id/sign_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tel"
                android:inputType="phone" />

            <EditText
                android:theme="@style/MainEditText"
                android:background="@drawable/edittext_shape"
                android:layout_marginTop="16dp"
                android:id="@+id/sign_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:ems="10"
                android:hint="@string/email" />

            <EditText
                android:theme="@style/MainEditText"
                android:background="@drawable/edittext_shape"
                android:layout_marginTop="16dp"
                android:id="@+id/sign_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                tools:ignore="InvalidImeActionId"
                android:ems="10"
                android:hint="@string/pass" />

        </LinearLayout>

        <Button
            android:theme="@style/ButtonTheme"
            android:id="@+id/sign_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginHorizontal="25dp"
            android:text="@string/already_exist"
            android:background="@drawable/button_shape"/>

        <Button
            android:theme="@style/MainButtonTheme"
            android:id="@+id/sign_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="25dp"
            android:background="@drawable/button_main_shape"
            android:text="@string/confirm" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</LinearLayout>