<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".main_activities.OrderCreationActivity">

    <EditText
        android:theme="@style/MainEditText"
        android:background="@drawable/edittext_shape"
        android:id="@+id/pet_name_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="кличка"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:paddingHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:theme="@style/ButtonTheme"
            android:onClick="setLocation"
            android:layout_weight="1"
            android:id="@+id/setPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_main_shape"
            android:text="@string/choose_place" />

        <Button
            android:theme="@style/ButtonTheme"
            android:id="@+id/tvTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_main_shape"
            android:clickable="true"
            android:onClick="onclick"
            android:text="@string/choose_time" />

    </LinearLayout>

    <EditText
        android:theme="@style/MainEditText"
        android:background="@drawable/edittext_shape"
        android:id="@+id/reward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/money"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:gravity="center"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/order_no_photo"
            android:theme="@style/HighlightedTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="нет фото"
            android:gravity="center"
            android:background="@drawable/button_shape"
            android:layout_weight="1"
            android:layout_marginRight="25dp"/>
        <ImageView
            android:visibility="gone"
            android:id="@+id/iv_pet_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp" />

        <Button
            android:theme="@style/ButtonTheme"
            android:id="@+id/bth_add_photo"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_main_shape"
            android:text="@string/add_photo" />

    </LinearLayout>

    <EditText
        android:theme="@style/MainEditText"
        android:background="@drawable/edittext_shape"
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <Button
        android:theme="@style/MainButtonTheme"
        android:id="@+id/publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_main_shape"
        android:onClick="submit"
        android:text="@string/publish" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp">
        <Button
            android:layout_gravity="right"
            android:theme="@style/ButtonTheme"
            android:background="@drawable/button_shape"
            android:id="@+id/bth_back_from_order_creation"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/end_list" />
    </LinearLayout>

</LinearLayout>